# local-task-scheduler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
local_task_scheduler/: main.py
local_task_scheduler/cli/: command_line_interface.py
local_task_scheduler/executor/: executor_service.py
local_task_scheduler/grpc_services/protobufs/: executor.proto  scheduler.proto
local_task_scheduler/scheduler/: scheduler_service.py
tests/: test_cli.py  test_executor.py  test_scheduler.py
